# MerkWerk

./: .gitignore  ARCHITEKTUR.md  ENTSCHEIDUNGEN.md  README.md
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: ipc_client.rs  lib.rs  main.rs  notes.rs  paths.rs  search.rs  semantic.rs  settings.rs  timeline.rs
app/src/components/: NotesView.tsx  SearchView.tsx  SemanticSearchView.tsx  SettingsView.tsx  StatusBar.tsx  TimelineView.tsx
daemon/: Cargo.toml
daemon/blacklist/: Cargo.toml
daemon/blacklist/src/: lib.rs
daemon/capture-win/: Cargo.toml
daemon/capture-win/src/: debounce.rs  hooks.rs  lib.rs  text_budget.rs  uia.rs  window.rs
daemon/capture-win/src/capture/: mod.rs
daemon/config/: Cargo.toml
daemon/config/src/: lib.rs
daemon/distiller/: Cargo.toml
daemon/distiller/src/: config.rs  context.rs  distill.rs  error.rs  lib.rs  prompt.rs
daemon/inference/: Cargo.toml
daemon/inference/src/: error.rs  lib.rs  mock.rs  ollama.rs
daemon/ipc-protocol/: Cargo.toml
daemon/ipc-protocol/src/: lib.rs
daemon/merkwerk-daemon/: Cargo.toml
daemon/merkwerk-daemon/src/: control.rs  distill_job.rs  ipc_server.rs  main.rs  policy.rs  runtime.rs
daemon/storage/: Cargo.toml
daemon/storage/src/: error.rs  lib.rs  migrations.rs  model.rs  store.rs  vector.rs
docs/: PLAN-etappe-0.md  RECHERCHE-winapi.md  ROADMAP.md
scripts/: ci-check.sh  longrun.ps1
