[package]
name = "capture-win"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
crossbeam-channel = "0.5.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
