[package]
name = "merkwerk-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "merkwerk-daemon"
path = "src/main.rs"

[dependencies]
storage = { path = "../storage" }
blacklist = { path = "../blacklist" }
config = { path = "../config" }
ipc-protocol = { path = "../ipc-protocol" }
capture-win = { path = "../capture-win" }
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }

[dev-dependencies]
tempfile = "3"
